--- a/Cliente/Practicas_js/Basico/Ejercicio3.html
+++ b/Cliente/Practicas_js/Basico/Ejercicio3.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    meta
+    <!-- Es para que la pagina pueda leer codigos ASCII -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- Este viewport contiene valores definidos para que el sitio web se adapte a cualquier dipositivo para ejecutarse de manera correcta -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejercicio 3</title>
 </head>
 <body>
 
     <p>Esta es la funcion PROMPT</p>
-    <script>
-
+    <ol>
+        <li>Captura un valor no definido</li>
+        <li>Muestra el valor</li>
+    </ol>  
+       <script>
+         Persona = prompt("Hola, introduce tu nombre");
+        console.log(Persona);
     </script>
 
     
