--- a/Cliente/Practicas_js/Basico/Ejercicio3.html
+++ b/Cliente/Practicas_js/Basico/Ejercicio3.html
@@ -16,11 +16,14 @@
         <li>Captura un valor no definido</li>
         <li>Muestra el valor</li>
     </ol>  
-       <script>
-         Persona = prompt("Hola, introduce tu nombre");
-        console.log(Persona);
-    </script>
 
-    
+    <p id="etiqueta"></p>
+
+       <script>
+        Persona = prompt("Hola, introduce tu nombre");
+        console.log(Persona);
+        document.getElementById("etiqueta").innerHTML= Persona;
+        </script>
+
 </body>
 </html>
