--- a/Cliente/Practicas_js/Basico/Ejercicio5.html
+++ b/Cliente/Practicas_js/Basico/Ejercicio5.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vinculando JS</title>
+    <title>Ejercicio 5</title>
 </head>
 <body>
-
-    <h1>Metodos de Impresion</h1>
-
-    <script src="JavaScript/Ejercicio4-2.js"></script>
     
+    <h1>Tipos de datos</h1>
+    <hr>
+    <h4>Numerico entero y float</h4>
+    <script>
+        
+    </script>
+
 </body>
 </html>
