Agrego programas hechos a base de aechivos HTML y JS independientes

--- a/Cliente/Practicas_js/Basico/Ejercicio5.html
+++ b/Cliente/Practicas_js/Basico/Ejercicio5.html
@@ -11,9 +11,64 @@
     <h1>Tipos de datos</h1>
     <hr>
     <h4>Numerico entero y float</h4>
+
     <script>
-        
+        var edad=16;
+        var sueldo=206.50;
     </script>
+
+    <h4>String -> Cadena de Texto</h4>
+
+    <script>
+        var Nombre="J.S";
+        var Apellido= "Bach";
+    </script>
+
+    <h4>Concatenación</h4>
+
+    <script>
+        var nombre="Ludwig Van";
+        var apellido = "Beethoven";
+        var sueldo = 206.5;
+    
+        // document.write("Mi nombre es "+nombre+" "+apellido+", y mi sueldo es de $"+sueldo+" pesos.");
+     document.write(`Mi nombre es ${nombre} ${apellido}, y mi sueldo es de ${sueldo} pesos.`);
+    </script>
+
+    <h4>Arreglos</h4>
+    <script>
+        let maestros = ["Daniel Mendez", "Mario Perez", "Mauro Rojas", "Luna"];
+        document.write(maestros[1]);
+    </script>
+
+    <h4>Objetos</h4>
+    <p>Este tipo de datos se declara en una hoja de estilo CSS</p>
+    <script>
+        var Object={
+        color:"blue",
+        size:12
+        }
+
+        console.log(Object);
+    </script>
+
+    <h4>Boolean</h4>
+    <script>
+        var falso = false;
+        var verdadero = true;
+    </script>
+
+    <h4>Indefinido-Undefined</h4>
+    <script>
+        var computadora;
+    </script>
+
+<h4>Null</h4>
+<script>
+    var numero=12;
+    var numero1=null;
+</script>
+
 
 </body>
 </html>
