Agregando montones de estos ejercicios

--- a/Cliente/Practicas_js/Basico/Ejercicio2.html
+++ b/Cliente/Practicas_js/Basico/Ejercicio2.html
@@ -7,12 +7,14 @@
     <title>Ejercicio 2</title>
 </head>
 <body>
-
+<!-- Parrafo de texto, etiqueta que debe cerrarse. A su etiqueta de cierre se le conoce como "pareada", o como tal, etiqueta de cierre -->
 <p>Esta es una funcion exclusiva de HTML5 para mostrar un mensaje a partir de un click
 </p>
-
+<!-- LOs atributos son alteraciones a las propiedades de un elemento HTML -->
 <p onclick="alert('Hola Mundo!')" id="parrafo">Haz click sobre el texto</p>
 <!-- Usar apostrofe sirve para separar las comillas externas de algun texto interno de las mismas -->
+
+<!-- Con una ayuda de estilo de CSS, al pasar el cursor por el texto, se volvera un puntero -->
 <style>
     #parrafo:hover{
         cursor: pointer;
