--- a/Cliente/Practicas_js/Basico/Ejercicio6.html
+++ b/Cliente/Practicas_js/Basico/Ejercicio6.html
@@ -9,8 +9,9 @@
 <body>
 
     <h1>Variables en JavaScript</h1>
-
+<!-- Ingreso de variables por una ventana emergente -->
     <script>
+        // Con el prompt, solicitamos ingresar datos con una ventana emergente
         let nombre = prompt("Ingrese su nombre");
         let apellido = prompt("Ingrese su apellido");
         let edad = prompt("Ingrese su edad");
@@ -24,7 +25,7 @@
         console.log(texto);
 
     </script>
-
+<!-- Ingresamos el valor a un elemento especifico de HTML -->
     <p id="etiqueta"></p>
 
     <script>
