Acabando el proyecto de Daniel

--- a/Cliente/Practicas_js/Reforzamiento2/Ejercicio2/Ejercicio2.html
+++ b/Cliente/Practicas_js/Reforzamiento2/Ejercicio2/Ejercicio2.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="Estilo2.css" rel="stylesheet" type="text/css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/d3ae0c1cce.js" crossorigin="anonymous"></script>
     <title>Ejercicio 2</title>
 
 </head>
@@ -24,24 +25,15 @@
       </div>
       </div>
       <br>
-      <div class="row">
-        <div class="col-md-4">
-          <div class="card">
-            <div class="card-body">
-              <h3 class="card-title">&nbsp; </h3>
-              <p id="salida" class="card-text">&nbsp;</p>
-            </div>
-          </div>
-        </div>
-        </div>
-     
+
+      
    
     <!-- <p id="salida"></p> -->
 
     <a name="" id="boton" class="btn btn-primary" href="#" role="button"><i class="fa-sharp fa-solid fa-dice"></i></a>
 
     <script>
-
+//Smm2w
         document.getElementById('boton').onclick =function salida(){
 
         let suerte=parseInt((Math.random()*32))+1;
