--- a/Web/Ejercicios/cursos-aulaclic/EtiquetasTexto/PrimerPagina.html
+++ b/Web/Ejercicios/cursos-aulaclic/EtiquetasTexto/PrimerPagina.html
@@ -1,13 +1,13 @@
-<HTML>
+<html>
 
 
-<HEAD>
+<head>
 
-<TITLE>Mi primera pagina</TITLE>
+<title>Mi primera pagina</title>
 
-</HEAD>
+</head>
 
-<BODY>
+<body>
 
     <u>Hola</u>
     <i>Hola</i>
@@ -16,5 +16,5 @@
 
 <p>Renatus Cartesius</p>
 
-</BODY>
-</HTML>
+</bo>
+</html>
